src/objects/CSV_Import__c.object
<CustomObject>
    <description>This object holds all CSV imports into the e-Warehouse and makes reporting possible per import.</description>
    <fields>
        <fullName>Import_Date__c</fullName>
        <label>Import Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Imported_Line_Count__c</fullName>
        <label>Imported Line Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Starting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsing file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converting data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SMEP-Saving Account Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMEP-Loan Account Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CSV Import</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSV Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSV Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>